# aerozen

./: .gitignore  CMakeLists.txt  README.md
aerozen/: CMakeLists.txt  advertise_options.cpp  advertise_options.hpp  advertise_options_test.cpp  aerozen_auto_headers.hpp.in  ciface.cpp  ciface.hpp  ciface_test.cpp  clock.cpp  clock.hpp  clock_test.cpp  config.hh  config.hpp.in  discovery.cpp  discovery.hpp  discovery_test.cpp  dynamic_factory.cpp  dynamic_factory.hpp  exception.hpp  factory.cpp  factory.hpp  handler_storage.hpp  handler_storage_test.cpp  helpers.cpp  helpers.hpp  helpers_test.cpp  installation_directories.cpp  installation_directories.hpp  message_factory.cpp  message_factory.hpp  message_info.cpp  message_info.hpp  message_info_test.cpp  net_utils.cpp  net_utils.hpp  net_utils_test.cpp  node.cpp  node.hpp  node_options.cpp  node_options.hpp  (+37 more)
aerozen/detail/: dynamic_message_cast.hpp  node.hpp
aerozen/log/src/: batch.cpp  batch.hpp  batch_private.hpp  batch_test.cpp  console.cpp  console.hpp  descriptor.cpp  descriptor.hpp  descriptor_test.cpp  log.cpp  log.hpp  log_test.cpp  message.cpp  message.hpp  message_test.cpp  msg_iter.cpp  msg_iter.hpp  msg_iter_private.hpp  playback.cpp  playback.hpp  playback_test.cpp  qualified_time.cpp  qualified_time.hpp  qualified_time_test.cpp  query_options.cpp  query_options.hpp  query_options_test.cpp  raii-sqlite3.cpp  raii-sqlite3.hpp  recorder.cpp  recorder.hpp  recorder_test.cpp  sql_statement.cpp  sql_statement.hpp  sql_statement_test.cpp
aerozen/log/src/detail/: query_options.hpp
aerozen/log/test/integration/: chirp_params.cpp  chirp_params.hpp  playback.cpp  query.cpp  recorder.cpp  topic_chirp_aux.cpp
aerozen/parameters/: CMakeLists.txt  client.cpp  client.hpp  client_test.cpp  interface.hpp  registry.cpp  registry.hpp  registry_test.cpp  result.cpp  result.hpp  result_test.cpp  utils.cpp  utils.hpp  utils_test.cpp
aerozen/parameters/cmd/: CMakeLists.txt  param_command_api.cpp  param_command_api.hpp  param_command_api_test.cpp  transportparam.yaml.in
aerozen/proto/: boolean.proto  clock.proto  discovery.proto  empty.proto  header.proto  int32.proto  int64.proto  parameter.proto  parameter_declaration.proto  parameter_declarations.proto  parameter_error.proto  parameter_name.proto  parameter_value.proto  statistic.proto  stringmsg.proto  time.proto  vector3d.proto
aerozen/python/src/aerozen/: _aerozen_pybind11.cpp
aerozen/test/: test_config.hpp.in  test_utils.hpp
aerozen/test/gtest_vendor/include/gtest/: gtest-assertion-result.h  gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-spi.h  gtest-test-part.h  gtest-typed-test.h  gtest.h  gtest_pred_impl.h
aerozen/test/gtest_vendor/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
aerozen/test/gtest_vendor/src/: gtest-assertion-result.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc  gtest_main.cc
aerozen/test/integration/: auth_pubsub.cpp  callback_scope_test.cpp  scoped_topic.cpp  statistics.cpp  two_procs_pubsub.cpp  two_procs_pubsub_stats.cpp  two_procs_srv_call.cpp  two_procs_srv_call_stress.cpp  two_procs_srv_call_sync1.cpp  two_procs_srv_call_without_input.cpp  two_procs_srv_call_without_input_stress.cpp  two_procs_srv_call_without_input_sync1.cpp  two_procs_srv_call_without_output.cpp  two_procs_srv_call_without_output_stress.cpp
aerozen/test/integration/test_executables/: authPubSubSubscriberInvalid_aux.cc  fastPub_aux.cc  pub_aux.cc  pub_aux_throttled.cc  scopedTopicSubscriber_aux.cc  twoProcsPubSubMixedSubscribers_aux.cc  twoProcsPubSubSingleSubscriber_aux.cc  twoProcsPubSubSubscriber_aux.cc  twoProcsPublisher_aux.cc  twoProcsSrvCallReplierInc_aux.cc  twoProcsSrvCallReplier_aux.cc  twoProcsSrvCallWithoutInputReplierInc_aux.cc  twoProcsSrvCallWithoutInputReplier_aux.cc  twoProcsSrvCallWithoutOutputReplierInc_aux.cc  twoProcsSrvCallWithoutOutputReplier_aux.cc
aerozen/test/performance/: CMakeLists.txt
aerozen/test/regression/: CMakeLists.txt
aerozen/utils/: config.hpp  config.hpp.in  environment.cpp  environment.hpp  environment_test.cpp  extra_test_macros.hpp  extra_test_macros_test.cpp  impl_ptr.hpp  never_destroyed.hpp  never_destroyed_test.cpp  subprocess.hpp  suppress_warning.hpp  utils.hpp.in
aerozen/utils/detail/: default_ops.hpp  extra_test_macros.hpp  impl_ptr.hpp  subprocess.hpp  suppress_warning.hpp
cmake/: AerozenAddComponent.cmake  AerozenBenchmark.cmake  AerozenBuildExamples.cmake  AerozenBuildExecutables.cmake  AerozenBuildTests.cmake  AerozenCMake.cmake  AerozenCmakeLogging.cmake  AerozenCodeCheck.cmake  AerozenCodeCoverage.cmake  AerozenConfigureBuild.cmake  AerozenConfigureProject.cmake  AerozenCreateCoreLibrary.cmake  AerozenCreateDocs.cmake  AerozenCxxStandard.cmake  AerozenFindPackage.cmake  AerozenGenerateVersionInfo.cmake  AerozenGetLibSourcesAndUnitTests.cmake  AerozenGetPackageXmlVersion.cmake  AerozenGetSources.cmake  AerozenImportTarget.cmake  AerozenInstallAllHeaders.cmake  AerozenManualSearch.cmake  AerozenPackaging.cmake  AerozenPkgConfig.cmake  AerozenPython.cmake  AerozenRelocatableBinaries.cmake  AerozenRonn2Man.cmake  AerozenSanitizers.cmake  (+22 more)
example/: CMakeLists.txt  custom_query.cpp  inproc.cpp  playback.cpp  publisher.cpp  publisher_c.cpp  publisher_c_fast.cpp  publisher_custom_msg.cpp  publisher_raw.cpp  record.cpp  requester.cpp  requester_async.cpp  requester_async_no_input.cpp  requester_no_input.cpp  requester_oneway.cpp  requester_raw.cpp  responser.cpp  responser_no_input.cpp  responser_oneway.cpp  subscriber.cpp  subscriber_c.cpp  subscriber_c_slow.cpp  subscriber_custom_msg.cpp  subscriber_generic.cpp  subscriber_raw.cpp  subscriber_stats.cpp
example/benchmark/: CMakeLists.txt  bench.cpp
example/cmake/: FindZeroMQ.cmake
example/msgs/: CMakeLists.txt  stringmsg.proto
example/zenoh/: CMakeLists.txt  zenoh_echo.cpp
(+16 files in other folders)
